<!-- Copyright (c) Microsoft. All rights reserved. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imen.facebookfalseprofile.ui.SelectImageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/ButtonStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/description"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_take_a_photo"
            style="@style/ButtonStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:background="@drawable/circle"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:onClick="takePhoto"
            android:paddingTop="0dp"
            android:text="@string/take_photo"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_select_a_photo_in_album"
            style="@style/ButtonStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:background="@drawable/circle"
            android:drawableTop="@android:drawable/ic_menu_gallery"
            android:onClick="selectImageInAlbum"
            android:paddingTop="0dp"
            android:text="@string/select_image_in_album"
            android:textColor="#fff" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/com_facebook_button_icon"
            android:onClick="takePhotoFromFB"
            android:padding="10dp"
            android:text="@string/from_fb"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:background="@drawable/circle"
            android:drawableTop="@android:drawable/ic_menu_share"
            android:onClick="shareapp"
            android:padding="0dp"
            android:text="@string/share"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/icon_about"
            android:onClick="about"
            android:paddingTop="0dp"
            android:text="@string/about"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="93dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_menu_revert" />
    </LinearLayout>
</LinearLayout>
